<!--
Snake - an Android Game
Copyright 2012 Nick Eyre <nick@nickeyre.com>

Snake is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

Snake is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with Snake.  If not, see <http://www.gnu.org/licenses/>.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" >

  <TextView
    android:id="@+id/textView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="10dp"
    android:text="@string/theme"
    android:textSize="18sp" />

  <Spinner
      android:id="@+id/spinnerTheme"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/textView1"
      android:background="@android:color/holo_red_dark"
      android:entries="@array/optionsTheme"
      android:layout_alignLeft="@+id/textView3"
      android:layout_alignRight="@+id/textView3"
      android:textColor="@color/colorBlanco"/>

  <TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/spinnerTheme"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="10dp"
    android:text="@string/controls"
    android:textSize="18sp" />

  <Spinner
      android:id="@+id/spinnerControls"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/textView2"
      android:background="@android:color/holo_red_dark"
      android:entries="@array/optionsControls"
      android:layout_alignRight="@+id/textView3"
      android:layout_alignLeft="@+id/textView3"
      android:textColor="@color/colorBlanco"/>

  <TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/spinnerControls"
    android:layout_marginTop="20dp"
    android:textSize="18sp"
    android:text="@string/viewMode" />

  <Spinner
      android:id="@+id/spinnerView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/textView3"
      android:background="@android:color/holo_red_dark"
      android:entries="@array/optionsView"
      android:layout_alignRight="@+id/textView3"
      android:layout_alignLeft="@+id/textView3"
      android:textColor="@color/colorBlanco"/>

  <TextView
    android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_below="@+id/spinnerView"
    android:textSize="18sp"
    android:layout_marginTop="20dp"
    android:text="@string/speed" />

  <Spinner
      android:id="@+id/spinnerSpeed"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/textView4"
      android:background="@android:color/holo_red_dark"
      android:entries="@array/optionsSpeed"
      android:layout_alignLeft="@+id/spinnerView"
      android:layout_alignRight="@+id/spinnerView"
      android:textColor="@color/colorBlanco"/>

  <Button
      android:id="@+id/button1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/spinnerSpeed"
      android:layout_marginTop="20dp"
      android:background="@android:color/holo_blue_dark"
      android:onClick="back"
      android:text="@string/back"
      android:layout_alignRight="@+id/spinnerSpeed"
      android:layout_alignLeft="@+id/spinnerSpeed" />

</RelativeLayout>
